# proj230

./: README.md  miner.cabal
src/: Miner.hs  MyUtils.hs  UI.hs
test/: Test.hs
