name:                miner
version:             0.1.0.0
cabal-version:       >=1.10

Library
  ghc-options:        -W -fdefer-typed-holes
  exposed-modules:    MyUtils
  Default-Extensions: OverloadedStrings
  -- other-extensions:
  build-depends:       base,
                       filepath,
                       directory,
                       QuickCheck,
                       linear,
                       random,
                       containers,
                       extra,
                       transformers,
                       lens,
                       vty
  hs-source-dirs:      src
  default-language:    Haskell2010

executable miner
  hs-source-dirs:      src
  other-modules:       Miner, UI, MyUtils
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  Default-Extensions: OverloadedStrings
  main-is:          Test.hs
  build-depends:    base,
                    filepath,
                    directory,
                    QuickCheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    process,
                    miner
  other-modules:    Common 